--- a/vignettes/sensemakr.bib
+++ b/vignettes/sensemakr.bib
@@ -2,12 +2,29 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Carlos Cinelli at 2020-02-28 18:28:26 -0800 
+%% Created for Carlos Cinelli at 2020-03-03 18:33:30 -0800
 
 
-%% Saved with string encoding Unicode (UTF-8) 
+%% Saved with string encoding Unicode (UTF-8)
 
 
+
+@article{sensemakr:R,
+	Author = {Cinelli, C and Hazlett, C},
+	Date-Added = {2020-03-03 18:30:46 -0800},
+	Date-Modified = {2020-03-03 18:30:46 -0800},
+	Journal = {R package Version 0.2},
+	Title = {sensemakr: sensitivity analysis tools for OLS},
+	Volume = {2},
+	Year = {2020}}
+
+@article{sensemakr:stata,
+	Author = {Cinelli, Carlos and Ferwerda, Jeremy and Hazlett, Chad},
+	Date-Added = {2020-03-03 18:30:46 -0800},
+	Date-Modified = {2020-03-03 18:30:46 -0800},
+	Journal = {Stata Package v1.0},
+	Title = {sensemakr for Stata: sensitivity analysis tools for OLS},
+	Year = {2020}}
 
 @article{hazlett:jcr2019,
 	Author = {Hazlett, Chad},
