--- a/vignettes/jss_sensemakr.Rmd
+++ b/vignettes/jss_sensemakr.Rmd
@@ -381,7 +381,7 @@ stargazer::stargazer(darfur.model,
                      header = FALSE, 
                      float = F)
 ```
-\caption{OLS results for \texttt{darfur.model}. Due to sapce, only the coefficients for \texttt{directlyharmed} and \texttt{female} are shown.}
+\caption{OLS results for \texttt{darfur.model}. Due to sapce, only the results for \texttt{directlyharmed} and \texttt{female} are shown.}
 \label{tab:darfur_ols}
 \end{table}
 
@@ -794,7 +794,7 @@ All plotting functions return invisibly the data needed to reproduce them, there
 
 These functions allow users to compute the adjusted estimates given different postulated degrees of confounding. As before, they can be called directly with `lm` objects or numerical data. For instance, in the case of Darfur, suppose a researcher has reasons to believe a confounder that explains 10% of the residual variance of the treatment and 20% of the residual variance of the outcome.  If this researher does not have acess to the Darfur data, she can still compute the bias that a confounder with such strength could cause. Here we show how to obtain the adjusted estimate and t-value that one would have obtained in the full regression adjusting for such confounder.
 
-```{r}
+```{r adj_est_t}
 adjusted_estimate(estimate = 0.097, se = 0.023, dof = 783, 
                   r2dz.x = .1, r2yz.dx = 0.15)
 adjusted_t(estimate = 0.097, se = 0.023, dof = 783, 
@@ -804,11 +804,61 @@ adjusted_t(estimate = 0.097, se = 0.023, dof = 783,
 The computation shows that this confounder is not strong enough to bring the estimate to zero, but it is sufficient to bring the t-value below the usual 5% signifiance threshold of 1.96.
 
 
-### Computing bounds
+### Computing bounds from summary statistics
 
+Finally, we show how users can compute bounds on the strength of confounding using only summary statistics, if the paper also provides a *treatment* regression table, i.e., a regression of the treatment on the observed covariates. These regressions are usually performed for "balance tests", in which the investigator assesses whether observed covariates predict treatment assigment. For the Darfur example, this regression is shown in Table \ref{tab:treat_reg}.
 
+\begin{table}
+\centering
+```{r stargazer_treat_darfur, echo=FALSE,  results = 'asis'}
+treat.model <- lm(directlyharmed ~ village +  female +
+                                 age + farmer_dar + herder_dar + 
+                                 pastvoted + hhsize_darfur, 
+                   data = darfur)
+stargazer::stargazer(treat.model, 
+                     keep = c("female"), 
+                     type = "latex", 
+                     header = FALSE, 
+                     float = F)
+```
+\caption{Treatment regression for the Darfur example. Due to space, only the results for \texttt{female} are shown, which will be used for benchmarking.}
+\label{tab:treat_reg}
+\end{table}
 
+Using the results of Tables \ref{tab:darfur_ols} and \ref{tab:treat_reg} we can compute the bounds on confounding 1, 2 and 3 times as strong as `female`, as we have done before. First we compute the partial $R^2$ of `female` with the treatment and the outcome
 
+```{r r2_female}
+r2yxj.x <- partial_r2(t_statistic = -0.232/0.024, dof = 783)
+r2dxj.x <- partial_r2(t_statistic = -0.097/0.036, dof = 783)
+```
+
+Next, we compute the bounds on the partial $R^2$ of the unobserved confounder using the `ovb_partial_r2_bound()` function.
+
+```{r manual_bounds}
+bounds <- ovb_partial_r2_bound(r2dxj.x = r2dxj.x,
+                               r2yxj.x = r2yxj.x,
+                               kd = 1:3,
+                               ky = 1:3,
+                               bound_label = paste(1:3, "x", "female"))
+```
+
+Finally, one uses the `adjusted_estimate()` function to compute the estimates implied by such hypothetical confounders.
+
+```{r man_adju_est}
+bound.values <- adjusted_estimate(estimate = 0.0973,
+                                  se = 0.0232,
+                                  dof = 783,
+                                  r2dz.x = bounds$r2dz.x,
+                                  r2yz.dx = bounds$r2yz.dx)
+
+```
+
+We can use all this information along with the numeric methods of the plot functions to reproduce the contour plots of Figure \ref{fig:darfur_contours} using only summary statistics usually found in regression tables. Note that, since we  are performing all calculations manually, the proper limits of the plot area also need to be set by the user.
+
+```{r manual_contour_plot_bound, eval=FALSE}
+ovb_contour_plot(estimate = 0.0973, se = 0.0232, dof = 783, lim = 0.45)
+add_bound_to_contour(bounds, bound_value = bound.values)
+```
 
 # Stata Package
 
